--- a/src/main/resources/templates/mypage/myPage.html
+++ b/src/main/resources/templates/mypage/myPage.html
@@ -139,99 +139,12 @@
                                 <a href="/member/user-order" >예매 내역 조회 <i></i></a>
                             </li>
                             <li >
-                                <a href="/user/mycgv/event/" title="현재선택">회원 탈퇴(미구현) <i></i></a>
+                                <a href="/member/withdrawal" title="현재선택">회원 탈퇴<i></i></a>
                             </li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-detail" id="mycgv_contents">
-                    <div class="tit-mycgv">
-                        <h3>최근 예매내역</h3>
-                        <p><em th:text="${orderList.size()}">총 0건</em> <a href="/member/user-order">예매내역 더보기</a></p>
-                        <span>예매번호로만 티켓을 찾을 수 있으니 반드시 확인 부탁드립니다.</span>
-                    </div>
-                    <form name="aspnetForm" method="post" action="./" id="aspnetForm" novalidate="novalidate">
-                        <div>
-                            <input type="hidden" name="__EVENTTARGET" id="__EVENTTARGET" value="">
-                            <input type="hidden" name="__EVENTARGUMENT" id="__EVENTARGUMENT" value="">
-                            <input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUKMTc0NzIwMTk3M2RkGpTZbHfO8pvW/Ta9En5loRX6E2E=">
-                        </div>
-                        <div>
-                            <input type="hidden" name="__VIEWSTATEGENERATOR" id="__VIEWSTATEGENERATOR" value="F268F2D4">
-                            <input type="hidden" name="__EVENTVALIDATION" id="__EVENTVALIDATION" value="/wEdAANOZtRado8flmBd6Juf8OumAAaiyC+ogOIlg3pscMtiP2lKUwCIH8TI/sjrTPJzW37qSeqQYBLB9CRMYU4y53rNrIwxzA==">
-                        </div>
-                        <!-- MY 예매내역 -->
-                        <input type="hidden" id="hidCancelReserveNo" name="hidCancelReserveNo">
-                        <div class="sect-base-booking">
-                            <div class="box-polaroid">
-                                <div class="box-inner">
-                                    <div class="lst-item">
-                                        <div class="box-number">
-                                            <em>예매번호</em>
-                                            <strong th:text="${recentOrder.getId()}">0056-0102-4966-250</strong>
-                                            <span th:text="${recentOrder.getIndate()}">(2023.01.02)</span>
-                                        </div>
-                                        <div class="box-image">
-                                            <a href="/movies/detail-view/?midx=86072">
-                                                <span class="thumb-image">
-                                                    <img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000086/86072/86072_126.jpg" alt="아바타-물의 길(3D) 포스터" onerror="errorImage(this)">
-                                                </span>
-                                            </a>
-                                        </div>
-                                        <div class="box-contents has_not_storeitem">
-                                            <dl>
-                                                <dt>
-                                                    <em th:text="${recentOrder.getMovieName()}">아바타-물의 길(3D)</em>
-                                                </dt>
-                                                <dd>
-                                                    <em>관람극장</em>
-                                                    <strong th:text="${recentOrder.getTheaterName()}">CGV 강남</strong>
-<!--                                                    <a href="javascript:theaterMove('0056');">[극장정보]</a>-->
-                                                </dd>
-                                                <dd>
-                                                    <em>관람일시</em>
-                                                    <strong>2023.01.08(일) 20:00</strong>
-                                                </dd>
-                                                <dd>
-                                                    <em>관람좌석</em>
-                                                    <strong th:text="${recentOrder.getSeat()}">H 14</strong>
-                                                </dd>
-                                            </dl>
-                                        </div>
-                                        <div class="price-n-btns">
-                                            <div class="bd-wrap">
-                                                <dl>
-                                                    <dt>총 결제금액</dt>
-                                                    <dd>
-                                                        <strong class="txt-lightblue" th:text="${recentOrder.getTotalPrice()} + '원'">17,000원</strong>
-                                                    </dd>
-                                                </dl>
-                                                <div class="set-btn">
-                                                    <input type="hidden" class="reserve-no" name="reserve-no" value="Bj2L6yI8Pj08Hr9n6+k4EEF/MJKQmTcD2CKQGs+A4WI=">
-                                                    <button type="button" title="새창" class="round inblack sendsmspopup"><span>문자보내기</span></button>
-                                                    <button type="button" data-status="94" class="round black cancel" onclick="noshowYN('N', '20230108' , '00' , '01'  , '8955.99113719167' , '' , ''  )"><span>예매취소</span></button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                    <div class="sect-mycgv-part">
-                        <div class="box-polaroid type1">
-                            <div class="box-inner">
-                                <div class="tit-mycgv">
-                                    <h3>MY 댓글 목록</h3>
-                                    <p><em>0건</em> <a href="/member/user-comment">MY 댓글목록 더보기</a></p>
-                                </div>
-                                <div class="col-myqna">
-                                    <ul><li>고객님의 1:1 문의내역이 존재하지 않습니다.</li></ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div> <!-- detail 끝 -->
+                <head th:replace="/mypage/mypage-th.html"></head>
             </div>
             <script type="text/javascript">
                 //<![CDATA[
