#32 - movie_detail 수정 및 추가
- form 태그에 id 추가하여 ajax로 처리할 수 있도록 수정
- 기존 init() -> initAllComment()로 잘못되어있던 것을 올바르게 수정함
- Comment insert ajax 및 검증 추가
- Comment update 추가 (아직 미완성, 추후 수정 필요)

--- a/src/main/resources/templates/movie_detail.html
+++ b/src/main/resources/templates/movie_detail.html
@@ -166,16 +166,16 @@
 <!--                                </div>-->
 <!--                            </div>-->
 
-                            <form method="post" action="/api/comment/add" style="margin: 0">
+                            <form method="post" id="commentAdd" style="margin: 0">
                                 <fieldset class="fld_reply">
                                     <legend class="screen_out">한줄평 쓰기 폼</legend>
 
-                                    <input type="hidden" th:name="movieId" th:value="${movieCode}">
+<!--                                    <input type="hidden" id="commentAddMovieCode" th:name="movieId" th:value="${movieCode}">-->
 
                                     <div class="real-rating">
                                         <div class="reply_write ">
-                                            <label for="content" class="lab_write screen_out">한줄평</label>
-                                            <textarea id="content" name="content" class="tf_reply" placeholder="이 영화의 한줄평을 입력해주세요" style="width: 70%; margin-left:10px"></textarea>
+                                            <label for="Commentcontent" class="lab_write screen_out">한줄평</label>
+                                            <textarea id="Commentcontent" name="content" class="tf_reply" placeholder="이 영화의 한줄평을 입력해주세요" style="width: 70%; margin-left:10px"></textarea>
                                         </div>
 
                                         <div class="wrap_btn">
@@ -357,13 +357,13 @@
                     // con+='<div class="box-comment"><p>'+data[i].content+'</p></div>';
                     // con+='</li>';
 
-                    con+='<tr>';
+                    con+='<tr id="comment'+data[i].id+'">';
                     con+='<td>'+data[i].memberId+'</td>';
-                    con+='<td>'+data[i].content+'</td>';
+                    con+='<td id="commentContent'+data[i].id+'">'+data[i].content+'</td>';
                     con+='<td>'+data[i].indate+'</td>';
                     con+='<td><button type="button" onclick="goodup('+data[i].id+')" style="border: 1px solid gray; padding: 5px; margin: 3px">좋아요</button>'+data[i].good+'</td>';
                     con+='<td><button type="button" onclick="badup('+data[i].id+')" style="border: 1px solid gray; padding: 5px; margin: 3px">신고요</button>'+data[i].bad+'</td>';
-                    con+='<td><button type="button" onclick="updateCommentByCommentId('+data[i].id+')" style="border: 1px solid gray; padding: 5px; margin: 3px">수정</button><button type="button" onclick="deleteCommentByCommentId('+data[i].id+')" style="border: 1px solid gray; padding: 5px; margin: 3px">삭제</button></td>';
+                    con+='<td><button type="button" id="commentUpdate'+data[i].id+'" onclick="updateComment('+data[i].id+')" style="border: 1px solid gray; padding: 5px; margin: 3px">수정</button><button type="button" id="commentDelete'+data[i].id+'" onclick="deleteCommentByCommentId('+data[i].id+')" style="border: 1px solid gray; padding: 5px; margin: 3px">삭제</button></td>';
 
 
                     // if(data[i].ismem=='Y'){
@@ -395,7 +395,7 @@
             // dataType: "json",
             success: function (data) {
                 // console.log("/api/comment/GoodUp : id는 " + id+ "data는" +data);
-                init();
+                initAllComment();
             }
         });
     }
@@ -408,23 +408,77 @@
             // dataType: "json",
             success: function (data) {
                 // console.log("/api/comment/BadUp : id는 " + id+ "data는" +data);
-                init();
+                initAllComment();
             }
         });
     }
 
-    // function updateCommentByCommentId(id){
-    //     $.ajax({
-    //         url: "/api/comment/BadUp/" +id,
-    //         type: "PUT",
-    //         // data:{'id':id},
-    //         // dataType: "json",
-    //         success: function (data) {
-    //             // console.log("/api/comment/BadUp : id는 " + id+ "data는" +data);
-    //             init();
-    //         }
-    //     });
-    // }
+    $("#commentAdd").submit(function(e) {
+        e.preventDefault();
+
+        let commentContent = $("#Commentcontent").val();
+
+        if(commentContent.length == 0) {
+            alert("한줄평 내용을 입력해주세요.");
+            return false;
+        }
+
+        if(commentContent.length > 250) {
+            alert("한줄평은 250자 이내로 입력해주세요.");
+            return false;
+        }
+
+        // console.log("commentAdd submit 함수 실행됨 + content는" + commentContent);
+
+        $.ajax({
+            type: "POST",
+            url: "/api/comment/add",
+            data: JSON.stringify({
+                "movieId": movieCode,
+                "content" : commentContent,
+                "memberId" : 77
+            }),
+            contentType : "application/json",
+            // dataType: "text",
+            success: function(data) {
+                initAllComment();
+            },
+            error: function(xhr) {
+                console.log("에러코드(INSERT) = "+xhr.status);
+                console.log("에러메세지 = " + textStatus);
+            }
+        });
+    });
+
+    function updateComment(id){
+        $.ajax({
+            url: "/api/comment/" +id,
+            type: "POST",
+            // data:{'id':id},
+            // dataType: "json",
+            success: function (data) {
+
+                let con='';
+                $('#commentContent'+data[i].id+'').html(con);
+                $('#commentUpdate'+data[i].id+'').html('저장');
+
+                initAllComment();
+            }
+        });
+    }
+
+    function updateCommentByCommentId(id){
+        $.ajax({
+            url: "/api/comment/update/" +id,
+            type: "PUT",
+            // data:{'id':id},
+            // dataType: "json",
+            success: function (data) {
+                // console.log("/api/comment/BadUp : id는 " + id+ "data는" +data);
+                initAllComment();
+            }
+        });
+    }
 
     function deleteCommentByCommentId(id){
 
@@ -434,7 +488,7 @@
                 url: "/api/comment/delete/" + id,
                 type: "DELETE",
                 success: function (data) {
-                    init();
+                    initAllComment();
                 }
             });
         }
