--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -79,12 +79,12 @@
                     <div class="panel-body">
                         <form  method="post"  action="/admin/login" id="loginForm">
                             <div class="form-group">
-                                <label class="control-label" for="userId">로그인 아이디</label>
-                                <input type="text" placeholder="example@gmail.com" title="Please enter you username" required="" value="" name="userId" id="userId" class="form-control">
+                                <label class="control-label" for="username">로그인 아이디</label>
+                                <input type="text" placeholder="example@gmail.com" title="Please enter you username" required="" value="" name="id" id="id" class="form-control">
                             </div>
                             <div class="form-group">
                                 <label class="control-label" for="password">비밀번호</label>
-                                <input type="password" title="Please enter your password" placeholder="******" required="" value="" name="password" id="password" class="form-control">
+                                <input type="password" title="Please enter your password" placeholder="******" required="" value="" name="pw" id="pw" class="form-control">
                             </div>
                             <button type="button" onclick="loginOn()" class="btn btn-success btn-block loginbtn">관리자 로그인하기</button>
                         </form>
@@ -106,30 +106,30 @@
 <script>
     function loginOn(){
 
-        var userId=$("#userId").val();
-        var password=$("#password").val();
+        var id=$("#id").val();
+        var pw=$("#pw").val();
 
-        if(username.length==0){
+        if(id.length==0){
             $("#warning").text("ID값이 비어있습니다.");
             return false;
         }
 
-        if(password.length==0){
+        if(pw.length==0){
             $("#warning").text("비밀번호 값이 비어있습니다.");
             return false;
         }
         $.ajax({
             type : "POST",
-            url : "/member/login", //요청 할 URL
+            url : "/admin/login", //요청 할 URL
             data : {
-                'userId':userId,
-                'password':password
+                'id':id,
+                'password':pw
             }, //넘길 파라미터
             success : function(data) {
                 //통신이 정상적으로 되었을때 실행 할 내용
                 if(data != '')    {
                     alert('로그인 성공하였습니다.');
-                    location.href="/";
+                    location.href="/admin/index";
                 }else{
                     $("#warning").text("아이디와 비밀번호를 확인해주세요.");
                 }
