Auto stash before merge of "develop" and "origin/develop"

--- a/src/main/resources/templates/mypage/mypage-th.html
+++ b/src/main/resources/templates/mypage/mypage-th.html
@@ -38,7 +38,8 @@
                         <div class="box-image">
                             <a href="/movies/detail-view/?midx=86072">
                                 <span class="thumb-image">
-                                    <img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000086/86072/86072_126.jpg" alt="아바타-물의 길(3D) 포스터" onerror="errorImage(this)">
+                                    <img th:if="${recentMovieImg != null}" th:src="${recentMovieImg.movieImg}"  alt="아바타-물의 길(3D) 포스터" onerror="errorImage(this)">
+                                    <img th:unless="${recentMovieImg != null}" th:src="" alt="아바타-물의 길(3D) 포스터" onerror="errorImage(this)">
                                 </span>
                             </a>
                         </div>
