--- a/src/main/resources/templates/movie_detail.html
+++ b/src/main/resources/templates/movie_detail.html
@@ -114,10 +114,12 @@
                 <div class="sect-base-movie">
                     <h3><strong id="movie_name"></strong>기본정보</h3>
                     <div class="box-image">
-                        <a href="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000086/86072/86072_1000.jpg" title="포스터 크게 보기 새창" target="_blank">
+<!--                        <span id="movieImg_big"><a href="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000086/86072/86072_1000.jpg" title="포스터 크게 보기 새창" target="_blank"></span>-->
+                        <span id="movieImg_big"></span>
             <span class="thumb-image">
-                <img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000086/86072/86072_320.jpg" alt="아바타-물의 길 포스터 새창" onerror="errorImage(this)">
-                <span class="ico-posterdetail">포스터 크게 보기</span>
+<!--                <span id="movieImg"><img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000086/86072/86072_320.jpg" alt="아바타-물의 길 포스터 새창" onerror="errorImage(this)"></span>-->
+                <span id="movieImg"></span>
+<!--                <span class="ico-posterdetail">포스터 크게 보기</span>-->
 
             </span>
                         </a>
@@ -305,7 +307,14 @@
 
                 $('#movie_detail_content').html(con);
 
-                $('#movie_name').html(data.movieNm)
+                $('#movie_name').html(data.movieNm);
+
+                let movieImgUrlArr = data.movieImg.split("|");
+                let randomNum = Math.floor(Math.random() * movieImgUrlArr.length);
+                let movieImgUrl = movieImgUrlArr[randomNum];
+                $('#movieImg_big').html('<a href="'+movieImgUrl+'" title="포스터 크게 보기 새창" target="_blank">');
+                $('#movieImg').html('<img src="'+movieImgUrl+'" alt="'+data.movieNm+' 포스터 새창" >');
+
             },
             error: function(xhr) {
                 console.log("실패다ㅠ");
