--- a/src/main/resources/templates/movie_detail.html
+++ b/src/main/resources/templates/movie_detail.html
@@ -160,6 +160,19 @@
                 <div class="cols-content" id="menu">
                     <div class="col-detail" style="width: 100%">
 
+                        <div id="sect-story-movie" style="padding-bottom: 40px; padding-top: 0px; margin-top: 0px;margin-left: 30px;">
+<!--                            &lt;아바타: 물의 길&gt;은 판도라 행성에서&nbsp;<br>-->
+<!--                            '제이크 설리'와 '네이티리'가 이룬 가족이 겪게 되는 무자비한 위협과&nbsp;<br>-->
+<!--                            살아남기 위해 떠나야 하는 긴 여정과 전투,&nbsp;<br>-->
+<!--                            그리고 견뎌내야 할 상처에 대한 이야기를 그렸다.&nbsp;<br>-->
+<!--                            <br>-->
+<!--                            월드와이드 역대 흥행 순위 1위를 기록한 전편 &lt;아바타&gt;에 이어<br>-->
+<!--                            제임스 카메론 감독이 13년만에 선보이는 영화로,&nbsp;<br>-->
+<!--                            샘 워싱턴, 조 샐다나, 시고니 위버, 스티븐 랭, 케이트 윈슬렛이 출연하고<br>-->
+<!--                            존 랜도가 프로듀싱을 맡았다.-->
+                        </div>
+
+
 <!--                            <div class="real-rating">-->
 <!--                                <input>-->
 <!--                                <div class="wrap_btn">-->
@@ -174,15 +187,18 @@
 
 <!--                                    <input type="hidden" id="commentAddMovieCode" th:name="movieId" th:value="${movieCode}">-->
 
-                                    <div class="real-rating">
+                                    <div class="real-rating" style="margin-bottom: 60px;">
                                         <div class="reply_write ">
                                             <label for="Commentcontent" class="lab_write screen_out">한줄평</label>
                                             <span class="textCount" id="firstNumm" style="color:orange;">0자</span> <span class="textTotal" style="color:orange;">/250자</span>
-                                            <textarea id="Commentcontent" name="content" class="tf_reply" placeholder="이 영화의 한줄평을 입력해주세요" maxlength="250" style="width: 70%; margin-left:10px"></textarea>
+                                            <textarea id="Commentcontent" name="content" class="tf_reply" placeholder="이 영화의 한줄평을 입력해주세요" maxlength="250" style="width: 68%; margin-left:10px"></textarea>
                                         </div>
 
                                         <div class="wrap_btn">
-                                            <button type="submit" class="link-gradewrite"><span>한줄평 작성</span></button>
+                                            <button type="submit" class="link-gradewrite" style="width: 76px; height: 50px; color: #ffffff; text-align: center; line-height: 50px; display: inline-block; border-radius: 3px; margin-left: 6px;">
+                                                <span>한줄평 작성</span>
+                                            </button>
+<!--                                            <a class="link-gradewrite" onclick="submit_comment()"><span>한줄평 작성</span></a>-->
                                             <a class="link-reviewwrite" href="/movies/point/my-list.aspx"><span>내 평점</span></a>
                                         </div>
                                     </div>
@@ -315,6 +331,8 @@
                 $('#movieImg_big').html('<a href="'+movieImgUrl+'" title="포스터 크게 보기 새창" target="_blank">');
                 $('#movieImg').html('<img src="'+movieImgUrl+'" alt="'+data.movieNm+' 포스터 새창" >');
 
+                $('#sect-story-movie').html(data.summary);
+
             },
             error: function(xhr) {
                 console.log("실패다ㅠ");
@@ -383,6 +401,12 @@
             }
         });
     }
+
+    // // 한줄평 작성 클릭 시 form submit 되게 하는 함수.
+    // // a태그의 class 로 CSS가 적용되어 있어 <button> 태그의 submit 속성을 사용하지 않고, <a> 태그로 submit을 해야 하는 상황이라 함수를 생성함
+    // function submit_comment() {
+    //     document.getElementById('commentAdd').submit();
+    // }
 
     $("#commentAdd").submit(function(e) {
         e.preventDefault();
