--- a/src/main/resources/templates/mypage/user-order-th.html
+++ b/src/main/resources/templates/mypage/user-order-th.html
@@ -34,7 +34,7 @@
             <a href="/movies/detail-view/?midx=86072">
               <span class="thumb-image">
                 <img th:if="${movie != null}" th:src="${movie[i.index].movieImg}" alt="아바타-물의 길(3D) 포스터" onerror="errorImage(this)">
-                <img th:unless="${movie != null}" th:src="" alt="아바타-물의 길(3D) 포스터" onerror="errorImage(this)">
+                <img th:unless="${movie != null}" th:src="${null}">
                 <!-- 영상물 등급 노출 변경 2022.08.24 -->
                 <i class="cgvIcon etc age12">12</i>
               </span>
