--- a/src/main/resources/templates/mypage/mypage-th.html
+++ b/src/main/resources/templates/mypage/mypage-th.html
@@ -39,7 +39,7 @@
                             <a href="/movies/detail-view/?midx=86072">
                                 <span class="thumb-image">
                                     <img th:if="${recentMovieImg != null}" th:src="${recentMovieImg.movieImg}"  alt="아바타-물의 길(3D) 포스터" onerror="errorImage(this)">
-                                    <img th:unless="${recentMovieImg != null}" th:src="${null}">
+                                    <img th:unless="${recentMovieImg != null}">
                                 </span>
                             </a>
                         </div>
