--- a/src/main/resources/templates/mypage/mypage-th.html
+++ b/src/main/resources/templates/mypage/mypage-th.html
@@ -36,7 +36,7 @@
                             <span th:unless="${recentOrder != null}" ></span>
                         </div>
                         <div class="box-image">
-                            <a href="/movies/detail-view/?midx=86072">
+                            <a th:if="${recentMovieImg != null}" th:href="'/movie/' + ${recentMovieImg.movieCd}">
                                 <span class="thumb-image">
                                     <img th:if="${recentMovieImg != null}" th:src="${recentMovieImg.movieImg}"  alt="아바타-물의 길(3D) 포스터" onerror="errorImage(this)">
                                     <img th:unless="${recentMovieImg != null}">
