--- a/src/main/resources/templates/mypage/user-order-th.html
+++ b/src/main/resources/templates/mypage/user-order-th.html
@@ -31,7 +31,7 @@
         </div>
         <div class="box-info">
           <div class="box-image">
-            <a href="/movies/detail-view/?midx=86072">
+            <a th:if="${movie != null}" th:href="'/movie/' + ${movie[i.index].movieCd}">
               <span class="thumb-image">
                 <img th:if="${movie != null}" th:src="${movie[i.index].movieImg}" alt="아바타-물의 길(3D) 포스터" onerror="errorImage(this)">
                 <img th:unless="${movie != null}" th:src="${null}">
