--- a/src/main/resources/templates/boardInsert.html
+++ b/src/main/resources/templates/boardInsert.html
@@ -589,7 +589,7 @@
                             <div class="board_view_area">
                                 <ul class="top_title_faq">
                                     <input id="memberId_insert" th:value="${memberDTO.getId()}" hidden>
-                                    <input id="nickname_insert" th:value="${memberDTO.getName()}" hidden>
+                                    <input id="nickname_insert" th:value="${memberDTO.getNickname()}" hidden>
                                     <li class="title">
                                         <input id="title_insert" placeholder="제목" autofocus>
                                     </li>
