--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -49,9 +49,10 @@
                         <li><a href="/">영화관</a></li>
                         <li><a href="/">특별관</a></li>
                         <li><a href="/">스토어</a></li>
-                        <li><a href="/member/signup">회원가입</a></li>
-                        <li><a href="/member/login" th:if="${session.nickname == null}">로그인</a></li>
-                        <li><a href="/member" th:if="${session.nickname != null}" style="font-size: 15px">마이페이지</a></li>
+                        <li><a href="/member/signup" th:if="${loginUser == null}">회원가입</a></li>
+                        <li><a href="/member/goLogin" th:if="${loginUser == null}">로그인</a></li>
+                        <li><a href="/member" th:if="${loginUser != null}" style="font-size: 15px">마이페이지</a></li>
+                        <li><a href="/logout" th:if="${loginUser != null}">로그아웃</a></li>
                     </ul>
                 </nav>
             </div>
@@ -448,7 +449,7 @@
 
                 <!-- card -->
                 <article class="help_box2">
-                    <h3>메가박스 할인카드</h3>
+                    <h3>무비 할인카드</h3>
                     <div class="card">
                         <ul>
                             <li>
