--- a/src/main/resources/templates/movie_detail.html
+++ b/src/main/resources/templates/movie_detail.html
@@ -29,17 +29,14 @@
     <link rel="stylesheet" media="print" type="text/css" href="https://img.cgv.co.kr/R2014/css/print.css">
     <link rel="stylesheet" type="text/css" href="https://img.cgv.co.kr/R2014/js/jquery.ui/smoothness/jquery-ui-1.10.4.custom.min.css">
 
-    <script type="text/javascript" async="" src="http://www.googletagmanager.com/gtag/js?id=G-559DE9WSKZ&amp;l=dataLayer&amp;cx=c"></script><script type="text/javascript" async="" src="http://www.google-analytics.com/analytics.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-NNNFR3"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="/common/js/extraTheaters.js"></script>
-    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/app.config.js"></script>
-    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" async="" src="http://www.googletagmanager.com/gtag/js?id=G-559DE9WSKZ&amp;l=dataLayer&amp;cx=c"></script><script type="text/javascript" async="" src="http://www.google-analytics.com/analytics.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-NNNFR3"></script><script async="" src="//www.google-analytics.com/analytics.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery.plugin/jquery.tmpl.min.js"></script>
     <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery.plugin/jquery.validate.js"></script>
     <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery.plugin/jquery.paging.min.js"></script>
     <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery.ui/jquery-ui-1.10.4.custom.min.js"></script>
     <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery.utils.js"></script>
-    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/app.utils.js"></script>
     <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery.utils.pageing.js"></script>
-    <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/app.init.js"></script>
 
     <!--[if lte IE 9]><script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery.plugin/jquery.placeholder.js"></script><![endif]-->
     <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/jquery.plugin/jquery.dotdotdot.min.js"></script>
@@ -78,7 +75,8 @@
     <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/amcharts.js"></script>
     <script type="text/javascript" src="https://img.cgv.co.kr/R2014/js/radar.js"></script>
 
-    <script type="text/javascript" src="https://img.cgv.co.kr/R2014//js/system/system.packed.js"></script></head>
+    <script type="text/javascript" src="https://img.cgv.co.kr/R2014//js/system/system.packed.js"></script>
+</head>
 
 <style>
     table {
@@ -191,7 +189,7 @@
                                         <div class="reply_write ">
                                             <label for="Commentcontent" class="lab_write screen_out">한줄평</label>
                                             <span class="textCount" id="firstNumm" style="color:orange;">0자</span> <span class="textTotal" style="color:orange;">/250자</span>
-                                            <textarea id="Commentcontent" name="content" class="tf_reply" placeholder="이 영화의 한줄평을 입력해주세요" maxlength="250" style="width: 68%; margin-left:10px"></textarea>
+                                            <textarea id="Commentcontent" name="content" class="tf_reply" placeholder="이 영화의 한줄평을 입력해주세요" maxlength="250" style="width: 78%; margin-left:10px"></textarea>
                                         </div>
 
                                         <div class="wrap_btn">
@@ -199,7 +197,7 @@
                                                 <span>한줄평 작성</span>
                                             </button>
 <!--                                            <a class="link-gradewrite" onclick="submit_comment()"><span>한줄평 작성</span></a>-->
-                                            <a class="link-reviewwrite" href="/movies/point/my-list.aspx"><span>내 평점</span></a>
+<!--                                            <a class="link-reviewwrite" href="/movies/point/my-list.aspx"><span>내 평점</span></a>-->
                                         </div>
                                     </div>
                                 </fieldset>
@@ -280,15 +278,16 @@
 <script>
 
     let movieCode = [[ ${movieCode} ]];
-    // let nickname = [[ ${session.nickname} ]];
+    console.log("movieCode = " + movieCode);
+    let memberId = [[ ${memberId} ]];
 
     $(document).ready(function() {
         initMovieDetail();
         initAllComment();
-
     });
 
     function initMovieDetail(){
+        console.log("initMovieDetail 실행됨");
         $.ajax({
             // type: "GET",
             url: "/api/movie/" + movieCode,
@@ -343,9 +342,13 @@
             }
         });
     }
+</script>
+
+<script>
 
     function initAllComment(){
         console.log("initAllComment 실행됨");
+
         $.ajax({
             type: "GET",
             url: "/api/comments/" + movieCode,
@@ -363,20 +366,22 @@
                 } else {
                     for (let i = 0; i < data.length; i++) {
                         con += '<tr id="comment' + data[i].id + '">';
-                        con += '<td>' + data[i].memberId + '</td>';
+                        con += '<td>' + data[i].nickname + '</td>';
                         con += '<td id="commentContent' + data[i].id + '">' + data[i].content + '</td>';
                         con += '<td>' + data[i].indate + '</td>';
                         con += '<td><button type="button" onclick="goodup(' + data[i].id + ')" style="border: 1px solid gray; padding: 5px; margin: 3px">좋아요</button>' + data[i].good + '</td>';
                         con += '<td><button type="button" onclick="badup(' + data[i].id + ')" style="border: 1px solid gray; padding: 5px; margin: 3px">신고요</button>' + data[i].bad + '</td>';
-                        con += '<td><span id="commentUpdate' + data[i].id + '"><button type="button" onclick="updateShowComment(' + data[i].id + ')" style="border: 1px solid gray; padding: 5px; margin: 3px">수정</button></span>';
-                        con += '<button type="button" id="commentDelete' + data[i].id + '" onclick="deleteCommentByCommentId(' + data[i].id + ')" style="border: 1px solid gray; padding: 5px; margin: 3px">삭제</button></td>';
+                        con += '<td>';
+                        if (memberId!=null && memberId == data[i].memberId) {
+                            con += '<span id="commentUpdate' + data[i].id + '"><button type="button" onclick="updateShowComment(' + data[i].id + ')" style="border: 1px solid gray; padding: 5px; margin: 3px">수정</button></span>';
+                            con += '<button type="button" id="commentDelete' + data[i].id + '" onclick="deleteCommentByCommentId(' + data[i].id + ')" style="border: 1px solid gray; padding: 5px; margin: 3px">삭제</button>';
+                        }
+                        con += '</td>';
                         con += '</tr>';
 
                     }
                 }
-                // $('#initAllComment').html(con);
                 $('#tbody').html(con);
-                $('#dataTable').DataTable();
             },
             error: function(xhr) {
                 console.log("initAllComment 실패다ㅠ");
@@ -385,7 +390,9 @@
             }
         });
     }
+</script>
 
+<script>
     function goodup(id){
         $.ajax({
             url: "/api/comment/GoodUp/" +id,
@@ -395,6 +402,11 @@
             success: function (data) {
                 // console.log("/api/comment/GoodUp : id는 " + id+ "data는" +data);
                 initAllComment();
+            },
+            error: function(xhr) {
+                console.log("실패다ㅠ");
+                console.log("에러메세지 = " + textStatus);
+                console.log("에러코드 = "+xhr.status);
             }
         });
     }
@@ -408,6 +420,11 @@
             success: function (data) {
                 // console.log("/api/comment/BadUp : id는 " + id+ "data는" +data);
                 initAllComment();
+            },
+            error: function(xhr) {
+                console.log("실패다ㅠ");
+                console.log("에러메세지 = " + textStatus);
+                console.log("에러코드 = "+xhr.status);
             }
         });
     }
@@ -417,7 +434,9 @@
     // function submit_comment() {
     //     document.getElementById('commentAdd').submit();
     // }
+</script>
 
+<script th:inline="javascript">
     $("#commentAdd").submit(function(e) {
         e.preventDefault();
 
@@ -434,6 +453,8 @@
         }
 
         // console.log("commentAdd submit 함수 실행됨 + content는" + commentContent);
+        let memberNickname = [[ ${nickname} ]];
+        console.log("memberId = " + memberId + " / memberNickname = " + memberNickname);
 
         $.ajax({
             type: "POST",
@@ -441,7 +462,8 @@
             data: JSON.stringify({
                 "movieId": movieCode,
                 "content" : commentContent,
-                "memberId" : 77
+                "memberId" : memberId,
+                "nickname" : memberNickname
             }),
             contentType : "application/json",
             // dataType: "text",
@@ -457,6 +479,9 @@
         });
     });
 
+</script>
+
+<script>
     $('#Commentcontent').keyup(function (e) {
         // console.log("Commentcontent 함수 호출");
 
